2002-02-10  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't prevent installation of libintl
	on NetBSD.

2002-02-06  Bruno Haible  <bruno@clisp.org>

	* libtool.m4: Upgrade from libtool-1.4 to libtool-1.4.2.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4 (gt_FUNC_FNMATCH): Ensure directory lib exists.

2002-02-04  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Use changequote to protect brackets.
	Reported by Santiago Vila <sanvila@unex.es>.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-30  Bruno Haible  <bruno@clisp.org>

	* error.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Don't use AC_LIB_APPENDTOVAR
	for LIB variables.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_LINKFLAGS): Also define LTLIB${NAME}.
	(AC_LIB_HAVE_LINKFLAGS): Likewise.
	(AC_LIB_LINKFLAGS_BODY): Also define LTLIB${NAME}.
	* iconv.m4 (AM_ICONV_LINK): Also define LTLIBICONV.
	* gettext.m4 (AM_GNU_GETTEXT): Define LIBINTL and LTLIBINTL instead
	of INTLLIBS.

2002-01-20  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_LINKFLAGS): Fix quoting so that multiple
	invocations of this macro work. Also set HAVE_LIBNAME for use by
	AC_LIB_LINKFLAGS_BODY.
	(AC_LIB_HAVE_LINKFLAGS): Fix quoting here as well.
	(AC_LIB_LINKFLAGS_BODY): If a HAVE_LIBNAME macro is already set,
	use the result of the corresponding previous AC_LIB_LINKFLAGS
	invocation, don't look on the filesystem. Fix typo for /usr/lib.
	Fix hardcode_libdir_flag_spec evaluation.

2002-01-20  Bruno Haible  <bruno@clisp.org>

	* libtool.m4 (_LT_AC_LTCONFIG_HACK): Remove two temporary files after
	use.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* iconv.m4 (AM_ICONV_LINK): New macro, extracted from AM_ICONV.
	(AM_ICONV): Call it.
	* gettext.m4 (AM_GNU_GETTEXT): Call AM_ICONV_LINK instead of AM_ICONV.
